# mcp-client

./: README.md  agents.md  call_forecast.py  pyproject.toml
tests/: __init__.py  test_call_forecast.py  test_integration.py
