[project]
name = "mcp-client"
version = "0.1.0"
description = "Example MCP client for calling HTTP(S) MCP servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio",
    "mcp",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.22",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
